# pde-transformer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker.env  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_verbose.txt
.github/workflows/: docs.yml  pre-commit.yml  publish.yml  test.yml
config/: default_callbacks.yaml  default_image_metrics.yaml  default_simulation_metrics.yaml  default_trainer_args.yaml  simulation_metrics_3d.yaml
config/ape_2d/baselines/: dit-s-flow.yaml  dit-s-mse.yaml  factformer.yaml  scot-s-mse.yaml  udit-s-flow.yaml  udit-s-mse.yaml  unet.yaml
config/ape_2d/data/: multi_task_norm.yaml
config/ape_2d/diffusion/: pde-mc-b-flow.yaml
config/ape_2d/supervised/: pde-mc-b-mse.yaml  pde-mc-l-mse.yaml  pde-mc-s-mse.yaml  pde-sc-b-mse-t2.yaml  pde-sc-b-mse.yaml  pde-sc-l-mse.yaml  pde-sc-s-mse.yaml
config/transformer/: dit_b.yaml  dit_l.yaml  dit_s.yaml  dit_xl.yaml
docs/: getting_started.md  index.md  landing.html  mixed_channel.md  pretrained-weights.md  pretrained_weights.md  requirements.txt  separate_channel.md  training.md
docs/assets/css/: extra.css
docs/datasets/: ape_2d.md  overview.md  the_well.md
docs/overrides/: main.html
env/: local.yaml
notebooks/: example_unstructured_data.ipynb  visualization_mc_ape2d.ipynb  visualization_sc_ape2d.ipynb
pdetransformer/: __init__.py  main.py  setup.py  utils.py  visualization.py
pdetransformer/callback/: __init__.py  callbacks.py  diffusers.py  ema.py  simulation_2d_metrics.py  videos.py
pdetransformer/core/: __init__.py
pdetransformer/core/mixed_channels/: __init__.py  pde_transformer.py  train_probabilistic.py  train_supervised.py  udit.py
pdetransformer/core/models/: __init__.py
pdetransformer/core/models/three_dimensional/: __init__.py  context_model.py  hyper_attn.py  output3d.py  p3d.py  pixelshuffle3D.py
pdetransformer/core/separate_channels/: __init__.py  pde_transformer.py  tasks.py  train_probabilistic.py  train_supervised.py
pdetransformer/core/unstructured/: Transolver_Irregular_Mesh.py  Transolver_Structured_Mesh_2D.py  Transolver_Structured_Mesh_3D.py  normalizer.py
pdetransformer/data/: cached_dataset.py  metadata_dataset.py  pbdlu_module.py  pdblu_module.py
pdetransformer/data/download_well/: download_all_2d_full.sh
pdetransformer/data/pbdl_dataloader/: config.json  dataset.py  fetcher.py  global_index.json  loader.py  normalization.py  utilities.py
pdetransformer/data/pbdl_dataloader/tools/: preview.py
pdetransformer/data/pbdl_dataloader/torch/: dataset.py  loader.py
pdetransformer/data/pbdl_dataloader/torch/phi/: dataset.py  loader.py  sampler.py
pdetransformer/data/pbdl_datatypes/: acdm_2d.py  ape_2d.py  ape_2d_xxl.py  variable_dt_dataset.py  well_2d.py
pdetransformer/data/pbdlu_dataloader/: dataset.py  logging.py  metadata_dataset.py  normalization.py  pbdlu_module.py
pdetransformer/data/simulations_apebench/: DataGenerationWithExponax.md  generate_all_2d.sh
pdetransformer/metric/: channel_wise_metric.py  metric.py  mse.py  vrmse.py
pdetransformer/objectives/: cot_flow_matching.py  diffusion_markov_chain.py  diffusion_markov_chain_coupled.py  lipman_flow_matching.py
pdetransformer/objectives/paths/: conditional_optimal_transport.py  sde.py
pdetransformer/sampler/: ancestral_sampler.py  sampler_base.py
scripts/: profile_p3d.py
src/callback/: simulation_2d_metrics.py  videos.py
src/core/mixed_channels/: __init__.py  pde_transformer.py
src/core/separate_channels/: __init__.py  pde_transformer.py  tasks.py  train.py  train_supervised.py
src/core/training/: __init__.py  single_step_diffusion.py  single_step_supervised.py
src/data/: joint_module.py  metadata_dataset.py  multi_module.py  pbdl_module.py  script_convert_torchfsm.py
src/data/pbdl_datatypes/: well_2d.py
src/sampler/pipeline/: __init__.py
