[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdetransformer"
version = "0.1.0"
description = "PDE-Transformer: Efficient and Versatile Transformers for Physics Simulations"
readme = "README.md"
authors = [
    { name = "Benjamin Holzschuh", email = "benjamin.holzschuh@tum.de" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "lightning>=2.2.5",
    "omegaconf>=2.3.0",
    "einops>=0.8.1",
    "lightning-bolts>=0.7.0",
    "torchvision>=0.18.0",
    "matplotlib>=3.7.0",
    "diffusers>=0.28.2",
    "torch-fidelity>=0.3.0",
    "wandb>=0.17.0",
    "numpy>=1.26.4",
    "transformers>=4.42.3",
    "accelerate>=0.30.1",
    "moviepy>=1.0.3",
    "pandas>=2.2.2",
    "imageio>=2.34.2",
    "timm>=1.0.12",
    "seaborn>=0.13.2",
    "torchprofile>=0.0.4",
    "h5py>=3.11.0",
]

[project.urls]
Homepage = "https://tum-pbs.github.io/pde-transformer/landing.html"
Repository = "https://github.com/tum-pbs/pde-transformer.git" 

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
)
'''

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["pdetransformer*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)